# aposteriori

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  dataset_naive_filtering_prevoxcbencode.py  dev-requirements.txt  make_wheels.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  python-build.yml
src/aposteriori/: __init__.py  config.py
src/aposteriori/data_prep/: cli.py  create_data_set.py  create_frame_data_set.py  discrete_structure.py
src/aposteriori/dnn/: README.md  config.py  train_frame_model.py
src/aposteriori/dnn/analysis/: callbacks.py
src/aposteriori/dnn/data_processing/: discretization.py  encoder.py  tools.py
src/aposteriori/dnn/network/: contig_model.py  frame_model.py
src/aposteriori/dnn/network/analysis/: callbacks.py  metrics.py
src/aposteriori/dnn/network/visualization/: frame.py  frame_activation.py  prediction_entropy.py
src/aposteriori/visualization/: frame_activation.py  prediction_entropy.py
src/dnn/: train_frame_model.py
src/dnn/data_processing/: encoder.py
src/dnn/network/: contig_model.py
src/dnn/network/visualization/: prediction_entropy.py
tests/: test_create_data_set.py  test_create_frame_data_set.py  test_discrete_structure.py
tests/testing_files/csv_pdb_list/: pdb_to_filter.csv  pdb_to_test.csv
tests/testing_files/filter/: pdb_to_filter.csv
tests/testing_files/pieces/: cullpdb_pc25_res1.6_R0.25_d190114_chains4365
