[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "Aposteriori"
version = "2.1.2"
requires-python = ">= 3.8"
readme = "README.md"
dependencies = [
    "ampal==1.5.1",
    "click==8.1.7",
    "h5py==3.8.0",
    "numpy",
    "flake8"
    ]
